cluster/gitops/cilium/cilium/netpols/default-deny-all.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: default-deny-all
spec:
  description: Deny all traffic by default
  enableDefaultDeny:
    egress: true
    ingress: true
  endpointSelector: {}
  egress:
    - {}
  ingress:
    - {}
