cluster/gitops/cilium/cilium/netpols/internet-access.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-internet-egress
spec:
  description: Allow access to the internet
  endpointSelector:
    matchLabels:
      external.netpols.home.arpa: egress.internet
  # TODO
  enableDefaultDeny:
    egress: false
    ingress: false
  egress:
    - toCIDRSet:
        - cidr: 0.0.0.0/8
          except:
            - 10.0.0.0/8
            - 172.16.0.0/12
            - 192.168.0.0/16
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-internet-ingress
spec:
  description: Allow access to the internet
  endpointSelector:
    matchLabels:
      external.netpols.home.arpa: ingress.internet
  # TODO
  enableDefaultDeny:
    egress: false
    ingress: false
  ingress:
    - toCIDRSet:
        - cidr: 0.0.0.0/8
          except:
            - 10.0.0.0/8
            - 172.16.0.0/12
            - 192.168.0.0/16
