cluster/gitops/cilium/cilium/netpols/test.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "cluster-default-kube-dns-egress"
spec:
  description: "Policy for egress allow to kube-dns from all Cilium managed endpoints in the cluster"
  endpointSelector:
    matchExpressions:
      - { key: dns.home.arpa/l7, operator: NotIn, values: ["true"] }

  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: "ANY"
